scrollbar styles fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,7 +231,7 @@ header.sticky .nav-bar {
     display: flex;
     flex-direction: column;
     margin-right: 40px;
-    z-index: 99999;
+    z-index: 9;
 }
 
 .home-container .media-icons a {
@@ -1324,8 +1324,16 @@ footer a {
 /*==================== Media query max-width 730px ====================*/
 @media screen and (max-width: 730px){
     /*==================== Common styles for all sections ====================*/
+    html {
+        overflow-x: hidden;
+    }
+    
     body {
         margin: 5rem 0 0 0;
+    }
+
+    ::-webkit-scrollbar { 
+        display: none;
     }
 
     .section-title-01{
